fix(signup): hide logos layer on mobiles

--- a/src/signup/components/SignUpFormContainer/index.scss
+++ b/src/signup/components/SignUpFormContainer/index.scss
@@ -29,6 +29,10 @@
     height: 100%;
     position: absolute;
     z-index: 1;
+
+    @media screen and (max-device-width: 767px) {
+      display: none;
+    }
   }
 }
 
